Fix issues with rewards not showing for school_admins and teachers

--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -1851,6 +1851,13 @@ h3 {
   .product {
     width: 240px;
     margin: 0 0 0 50px;
+    .product-title {
+      a.info {
+        font-family: 'sketch_rockwellregular';
+        font-size: 1.35em;
+        font-weight: bold;
+      }
+    }
     .product-image {
       display: inline-block;
     }
@@ -2266,7 +2273,7 @@ dl.details {
 }
 
 #reward-templates #template-controls {
-  padding: 30px 0 0 100px; 
+  padding: 30px 0 0 100px;
 }
 
 #reward-templates-grid {
@@ -2277,7 +2284,7 @@ dl.details {
 #reward-templates-grid .template-row {
   width:100%;
   margin: 7px 0;
-  padding: 20px 0 0 5px; 
+  padding: 20px 0 0 5px;
   float:left;
   text-align:center;
 }
